<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <include layout="@layout/toolbar"/>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/name"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/phone"/>

        <EditText
            android:id="@+id/phone"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/called"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center"
            android:spinnerMode="dialog"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/position"/>

        <EditText
            android:id="@+id/position"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/fax"/>

        <EditText
            android:id="@+id/fax"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/email"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/addr"/>

        <EditText
            android:id="@+id/addr"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/reMark"/>

        <EditText
            android:id="@+id/remark"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/id_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/confirm_button_margin"
        android:background="@color/material_blue_toolbar"
        android:text="@string/confirm"/>
</LinearLayout>
