<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_cardview_height"
        android:orientation="horizontal">

        <TextView
            style="@style/visit_detail_item_style"
            android:text="@string/serial_number"
            />

        <TextView

            android:id="@+id/id_serial_number"
            style="@style/visit_detail_item"/>
    </LinearLayout>

    <Space
        style="@style/style_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_cardview_height"
        android:orientation="horizontal">

        <TextView
            style="@style/visit_detail_item_style"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/id_title"
            style="@style/visit_detail_item"/>
    </LinearLayout>

    <Space
        style="@style/style_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_cardview_height"
        android:orientation="horizontal">

        <TextView

            style="@style/visit_detail_item_style"
            android:text="@string/customer_name"
            />

        <TextView
            android:id="@+id/id_customer_name"
            style="@style/visit_detail_item"/>
    </LinearLayout>

    <Space
        style="@style/style_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_cardview_height"
        android:orientation="horizontal">

        <TextView
            style="@style/visit_detail_item_style"
            android:text="@string/project_price"
            />

        <TextView
            android:id="@+id/id_project_price"
            style="@style/visit_detail_item"/>
    </LinearLayout>

    <Space
        style="@style/style_divider"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_cardview_height"
        android:orientation="horizontal">

        <TextView
            style="@style/visit_detail_item_style"
            android:text="@string/payment_mode"
            />

        <TextView
            android:id="@+id/id_payment_mode"
            style="@style/visit_detail_item"/>
    </LinearLayout>

    <Space
        style="@style/style_divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_cardview_height"
        android:orientation="horizontal">

        <TextView
            style="@style/visit_detail_item_style"
            android:text="@string/contract_no"
            />

        <TextView
            android:id="@+id/id_contract_no"
            style="@style/visit_detail_item"/>
    </LinearLayout>

    <Space
        style="@style/style_divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_cardview_height"
        android:orientation="horizontal">

        <TextView
            style="@style/visit_detail_item_style"
            android:text="@string/remark"
            />

        <TextView
            android:id="@+id/id_remark"
            style="@style/visit_detail_item"/>
    </LinearLayout>

    <Space
        style="@style/style_divider"/>

</LinearLayout>
