<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView
                style="@style/visit_detail_item_style"
                android:text="@string/customer_name"
                />

            <TextView
                android:id="@+id/id_customer_name"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView
                style="@style/visit_detail_item_style"
                android:text="@string/customer_type"/>

            <TextView
                android:id="@+id/id_customer_type"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView

                style="@style/visit_detail_item_style"
                android:text="@string/customerLevel"
                />

            <TextView
                android:id="@+id/id_customer_level"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView
                style="@style/visit_detail_item_style"
                android:text="@string/customerResource"
                />

            <TextView
                android:id="@+id/id_customer_resource"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView
                style="@style/visit_detail_item_style"
                android:text="@string/qianzai_level"
                />

            <TextView
                android:id="@+id/id_customer_qianzai_level"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView
                style="@style/visit_detail_item_style"
                android:text="@string/customerIndustry"
                />

            <TextView
                android:id="@+id/id_customer_industry"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView
                style="@style/visit_detail_item_style"
                android:text="@string/customerArea"
                />

            <TextView
                android:id="@+id/id_customer_area"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView
                style="@style/visit_detail_item_style"
                android:text="@string/contact_addr"
                />

            <TextView
                android:id="@+id/id_customer_addr"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_cardview_height"
            android:orientation="horizontal">

            <TextView
                style="@style/visit_detail_item_style"
                android:text="@string/remark"
                />

            <TextView
                android:id="@+id/id_customer_remark"
                style="@style/visit_detail_item"
                android:gravity="center"/>
        </LinearLayout>

        <Space
            style="@style/style_divider"/>

    </LinearLayout>
</ScrollView>