<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <include layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_marginTop="@dimen/margin20dp"
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/emp_no"/>

        <EditText
            android:id="@+id/emp_no"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>


    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/changed_stage"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/changed_stage_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin5dp"
            android:gravity="center"
            android:spinnerMode="dialog"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/add_contact_layout_style">

        <TextView

            style="@style/add_contact_textview_style"
            android:text="@string/change_reason"/>

        <EditText
            android:id="@+id/change_reason"
            style="@style/add_customer_edittext_style"
            />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/id_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/confirm_button_margin"
        android:background="@drawable/round_corners_bg"
        android:text="@string/confirm"/>
</LinearLayout>
